# k-wave-python

./: .buildinfo  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  array.html  docs_requirements.txt  example_at_array_as_sensor.py  example_requirements.txt  genindex.html  index.html  install_binaries.py  jupytext.toml  kgrid.html  kmedium.html  ksensor.html  ksimulation.html  ksource.html  kspace_fo.html  kwave.data.html  kwave.enums.html  kwave.executor.html  kwave.html  kwave.kWaveSimulation.html  kwave.kWaveSimulation_helper.create_absorption_variables.html  kwave.kWaveSimulation_helper.create_storage_variables.html  kwave.kWaveSimulation_helper.data_cast.html  kwave.kWaveSimulation_helper.display_simulation_params.html  kwave.kWaveSimulation_helper.expand_grid_matrices.html  kwave.kWaveSimulation_helper.html  kwave.kWaveSimulation_helper.retract_transducer_grid_size.html  kwave.kWaveSimulation_helper.save_to_disk_func.html  (+50 more)
.github/: CONTRIBUTING.md
.requirements/: base.txt  docs.txt  example.txt
_modules/: index.html  kwave.html
_sources/: index.rst.txt  kmedium.rst.txt  ksource.rst.txt  kspace_fo.rst.txt  kwave.kWaveSimulation_helper.rst.txt  kwave.kWaveSimulation_helper.set_sound_speed_ref.rst.txt  kwave.kmedium.rst.txt  kwave.reconstruction.rst.txt  kwave.recorder.rst.txt  kwave.utils.dotdictionary.rst.txt  kwave.utils.math.rst.txt  kwave.utils.matrix.rst.txt  kwave.utils.rst.txt  simopt.rst.txt
_static/: conf.py  index.rst
benchmarks/: README.md  __init__.py  benchmark.py  helpers.py
converter/: kspaceFirstOrder2D_543_563.py  main.py  script.py
development/: development_environment.html
docs/: Makefile  README.md  array.rst  conf.py  examples.rst  examples_guide.rst  generate_example_notebooks.py  index.rst  kgrid.rst  kmedium.rst  ksensor.rst  ksimulation.rst  ksource.rst  kspace_fo.rst  kwave.data.rst  kwave.enums.rst  kwave.executor.rst  kwave.kWaveSimulation.rst  kwave.kWaveSimulation_helper.create_absorption_variables.rst  kwave.kWaveSimulation_helper.create_storage_variables.rst  kwave.kWaveSimulation_helper.data_cast.rst  kwave.kWaveSimulation_helper.display_simulation_params.rst  kwave.kWaveSimulation_helper.expand_grid_matrices.rst  kwave.kWaveSimulation_helper.retract_transducer_grid_size.rst  kwave.kWaveSimulation_helper.rst  kwave.kWaveSimulation_helper.save_to_disk_func.rst  kwave.kWaveSimulation_helper.scale_source_terms_func.rst  kwave.kWaveSimulation_helper.set_sound_speed_ref.rst  kwave.kgrid.rst  kwave.kmedium.rst  kwave.ksensor.rst  kwave.ksource.rst  kwave.kspaceFirstOrder.rst  kwave.kspaceFirstOrder2D.rst  kwave.kspaceFirstOrder3D.rst  kwave.kspaceFirstOrderAS.rst  kwave.ktransducer.rst  kwave.options.rst  kwave.reconstruction.beamform.rst  kwave.reconstruction.converter.rst  (+20 more)
examples/: README.md  at_array_as_sensor.py  at_array_as_source.py  at_circular_piston_3D.py  at_circular_piston_AS.py  at_focused_annular_array_3D.py  at_focused_bowl_3D.py  at_focused_bowl_AS.py  bmode.html  bmode_reconstruction_example.py  example_array_as_a_sensor.py  example_array_as_a_source.py  example_at_array_as_sensor.py  example_at_linear_array_transducer.py  example_ivp_photoacoustic_waveforms.py  example_utils.py  ivp_1D_simulation.py  ivp_1d_simulation.py  ivp_3D_simulation.py  ivp_binary_sensor_mask.py  ivp_heterogeneous_medium.py  ivp_homogeneous_medium.py  ivp_loading_external_image.py  ivp_photoacoustic_waveforms.py  ivp_recording_particle_velocity.py  ivp_saving_movie_files.py  na_controlling_the_PML.py  na_filtering_part_1.py  na_filtering_part_2.py  na_filtering_part_3.py  na_modelling_nonlinearity.py  na_optimising_performance.py  na_source_smoothing.py  new_api_ivp_2D.py  new_api_transducer_3D.py  pr_2D_FFT_line_sensor.py  pr_3D_FFT_planar_sensor.py  sd_directional_array_elements.py  sd_directivity_modelling_2D.py  sd_directivity_modelling_3D.py  (+13 more)
get_started/: contrib.html  first_steps.html  installation.html  license.html
html/: .buildinfo  array.html  genindex.html  kgrid.html  kmedium.html  ksensor.html  ksimulation.html  ksource.html  objects.inv  recorder.html  searchindex.js  simopt.html
kwave/: __init__.py  compat.py  data.py  enums.py  executor.py  kWaveSimulation.py  kgrid.py  kmedium.py  ksensor.py  ksource.py  kspaceFirstOrder.py  kspaceFirstOrder1D.py  kspaceFirstOrder2D.py  kspaceFirstOrder3D.py  kspaceFirstOrderAS.py  kspaceLineRecon.py  kspacePlaneRecon.py  ktransducer.py  options.py  pstdElastic2D.py  pstdElastic3D.py  recorder.py
kwave_py/: __init__.py  kWaveSimulation.py  kgrid.py  kmedium.py  ksensor.py  ksource.py  kspaceFirstOrder.py  kspaceFirstOrder1D.py  kspaceFirstOrder2D.py  kspaceFirstOrder3D.py  kspaceFirstOrderAS.py  ktransducer.py  options.py  recorder.py
notebooks/: README.md  ivp_1D_simulation.ipynb  ivp_3D_simulation.ipynb  ivp_binary_sensor_mask.ipynb  ivp_heterogeneous_medium.ipynb  ivp_homogeneous_medium.ipynb  ivp_loading_external_image.ipynb  ivp_photoacoustic_waveforms.ipynb  ivp_recording_particle_velocity.ipynb  ivp_saving_movie_files.ipynb  na_controlling_the_PML.ipynb  na_filtering_part_1.ipynb  na_filtering_part_2.ipynb  na_filtering_part_3.ipynb  na_modelling_nonlinearity.ipynb  na_optimising_performance.ipynb  na_source_smoothing.ipynb  pr_2D_FFT_line_sensor.ipynb  pr_3D_FFT_planar_sensor.ipynb  sd_directional_array_elements.ipynb  sd_directivity_modelling_2D.ipynb  sd_directivity_modelling_3D.ipynb  sd_focussed_detector_2D.ipynb  sd_focussed_detector_3D.ipynb  tvsp_3D_simulation.ipynb  tvsp_doppler_effect.ipynb  tvsp_homogeneous_medium_dipole.ipynb  tvsp_homogeneous_medium_monopole.ipynb  tvsp_snells_law.ipynb  tvsp_steering_linear_array.ipynb
plans/: issue-664-setup-droplet.sh  issue-664.md  release-strategy.md
requirements/: base.txt  docs.txt  example.txt  test.txt
scripts/: compare_example_outputs.py
tests/: __init__.py  diff_utils.py  h5_summary.py  setup_test.py  test__init__.py  test_alpha_power_near_unity.py  test_benchmark.py  test_binary_present.py  (+86 more)
(+710 files in other folders)
