[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "k-Wave-python"
dynamic = ["version"]
description = "Acoustics toolbox for time domain acoustic and ultrasound simulations in complex and tissue-realistic media."
readme = "docs/README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Farid Yagubbayli", email = "farid.yagubbayli@tum.de" },
    { name = "Walter Simson", email = "walter.simson@tum.de"}
]
maintainers = [
    { name = "Walter Simson", email = "walter.simson@tum.de" },
    { name = "Farid Yagubbayli", email = "farid.yagubbayli@tum.de" }
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "h5py==3.10.0",
    "scipy==1.10.1",
    "opencv-python==4.9.0.80",
    "deepdiff==6.7.1",
    "matplotlib==3.7.2",
    "numpy>=1.22.2,<1.27.0",
    "nptyping==2.5.0",
    "beartype==0.16.4"
]

[project.urls]
Homepage = "http://www.k-wave.org/"
Documentation = "https://waltersimson.com/k-wave-python/"
Repository = "https://github.com/waltsims/k-wave-python"
Bug-tracker = "https://github.com/waltsims/k-wave-python/issues"

[project.optional-dependencies]
test = ["pytest",
        "phantominator",
        "requests==2.31.0"]
example = ["gdown==4.7.3"]
docs = ["m2r2==0.3.2",
    "sphinx-copybutton==0.5.2",
    "sphinx-tabs==3.4.4",
    "sphinx-toolbox==3.5.0",
    "furo==2023.9.10"]
dev = ["pre-commit==3.5.0"]

[tool.hatch.version]
path = "kwave/__init__.py"

[tool.hatch.metadata]

# can be removed as soon as uff is published and no longer a direct reference
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["kwave", "kwave.utils", "kwave.reconstruction", "kwave.kWaveSimulation_helper"]


[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/examples",
    "/tests",
    "/kwave/bin/*",
    "*.mat",
]

[tools.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Allow lines to be as long as 140 characters.
line-length = 140
# Ruff and nptyping.Shape do not play well together.
# See the open issue: https://github.com/astral-sh/ruff/issues/6014
ignore = ["F821"]
[tool.ruff.per-file-ignores]
# ksource.py contains a lot of non-ported Matlab code that is not usable.
"kwave/ksource.py" = ["F821"]
# create_storage_variables.py references a few functions that are not ported yet.
"kwave/kWaveSimulation_helper/create_storage_variables.py" = ["F821"]
"kwave/kWaveSimulation_helper/__init__.py" = ["F401"]
"kwave/options/__init__.py" = ["F401"]
# Fix in the future => E731: Do not assign a `lambda` expression, use a `def`
"kwave/utils/mapgen.py" = ["E731"]
